--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ p {
   margin: 10px auto;
   border: 1px solid #aaa;
   box-shadow: 3px 3px 2px #ccc;
-  max-width: 80%;
+  width: 80%;
   padding: 10px;
   margin-top: 10px;
   opacity: 1;
@@ -59,7 +59,8 @@ h3 {
 }
 
 .main {
-  max-width: 80%;
+  width: 80%;
+  max-width: 1280px;
   margin: 0 auto;
   margin-top: 5px;
   opacity: 1;
@@ -71,7 +72,7 @@ h3 {
 }
 
 figcaption {
-  max-width: 80%;
+  width: 80%;
   font-style:italic;
 }
 
@@ -118,13 +119,27 @@ img {
   box-shadow: 1px 1px 2px #aaa;
 }
 
+.backToTop {
+  display: inline-block;
+  opacity: 1;
+  transition: opacity 0.5s;
+  position: fixed;
+  top:0;
+  left:0;
+  padding:5px;
+  background: white;
+  border: 1px solid black;
+  box-shadow: 1px 1px 2px #aaa;
+}
+
+/*note: put animation classes after main classes for it to work*/
 .fadeOut {
   opacity:0;
-  transition:none;
+  transition: opacity 0.2s;
 }
 
 .listPad {
-  margin-top: 50px;
+  margin-top: 100px;
   transition:none;
 }
 
@@ -132,9 +147,14 @@ img {
   text-align: center;
 }
 
-.gamePic, .release, .platforms {
-  display:inline-block;
+.gamePic {
+  margin: 50px auto 10px auto;
+  display:block;
 }
+
+
+
+
 /*media queries*/
 @media (max-width: 768px) {
   .main {
